Added main font to mixins.less and completed button styling in styles.less

--- a/less/styles.less
+++ b/less/styles.less
@@ -23,3 +23,17 @@ Header
 header {
   background-color: @yellow;
 }
+
+/*===========================
+
+Links
+
+===========================*/
+button {
+	.main-font();
+	font-size: 18px;
+	text-transform: uppercase;
+	background-color: @yellow;
+	border-radius: 8px;
+	padding: .5rem 1rem;
+}
