Fixed navigation bar to look like the mockup.

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -10,3 +10,8 @@ Fonts
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
 }
+
+.header-font {
+  text-transform: uppercase;
+  color: #050500;
+}
