Fixed index.html to have the buttons go to a URL link.

--- a/less/styles.less
+++ b/less/styles.less
@@ -39,6 +39,11 @@ button {
 	padding: .5rem 1rem;
 }
 
+button:hover {
+	background-color: @red;
+	color: white;
+}
+
 
 /*===========================
 
