Added Bootstrap eto index.html and fixed some elements in CSS that messed up from Bootstrap add

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -11,6 +11,11 @@ Fonts
   font-weight: 500;
 }
 
+.main-link {
+  text-decoration: none;
+  color: @black;
+}
+
 .header-font {
   text-transform: uppercase;
   color: #050500;
