--- a/less/variables.less
+++ b/less/variables.less
@@ -9,3 +9,11 @@ Colors
 @red: #EE252F;
 @black: #080801;
 @heading-color: #050500;
+
+
+/*===========================
+
+Padding
+
+===========================*/
+@main-padding: 1.5rem;
