--- a/less/styles.less
+++ b/less/styles.less
@@ -37,28 +37,23 @@ Links
 
 ===========================*/
 
-button {
-	.main-font();
+.btn-primary {
+	.main-font ();
 	.header-font();
 	font-size: 18px;
 	background-color: @yellow;
 	border-radius: 8px;
-	padding: .5rem @main-padding;
+	border: none;
 }
-
-button a {
-	.main-link ();
-}
-
-button:hover {
+.btn-primary:hover {
+	color: @gray;
 	background-color: @red;
-	color: white;
 }
 
-button a:hover {
-	color: white;
+.btn-primary:focus {
+	border: none;
+  box-shadow: none;
 }
-
 
 /*===========================
 
@@ -82,8 +77,19 @@ li a {
 	padding-left: @main-padding;
 }
 
+li a:hover {
+	.main-font();
+	.main-link();
+	color: @red;
+	padding-left: @main-padding;
+}
+
 span a {
 	color: @red;
+}
+
+span a:hover {
+	color: @black;
 }
 
 /*===========================
