Fixed hero so that the World's Best Burgers section could be seen

--- a/less/styles.less
+++ b/less/styles.less
@@ -98,11 +98,10 @@ Hero
 
 ===========================*/
 .hero {
-  width: 100vw;
-	height: 30%;
+  width: 100%;
+	height: 200px;
   background: black;
   overflow: hidden;
-	position: absolute;
 }
 
 .hero-img {
@@ -115,8 +114,9 @@ Hero
 
 .hero-items {
 	position: relative;
-	top: -11rem;
 	text-align: center;
+	top: -11rem;
+	margin: 0 auto;
 }
 
 /*===========================
@@ -129,6 +129,17 @@ Photos
 	max-width: 15rem;
 	object-fit: cover;
 }
+
+
+/*===========================
+
+Sections
+
+===========================*/
+.view-menu {
+	clear: both;
+}
+
 
 /*===========================
 
