Styled headers and changed h2 to h1 headers in index.html

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -7,7 +7,7 @@ Fonts
 
 ===========================*/
 .main-font {
-  font-family: 'Roboto', sans-serif;
+  font-family: @sans-serif-font;
   font-weight: 500;
 }
 
@@ -17,6 +17,8 @@ Fonts
 }
 
 .header-font {
+  font-family: @sans-serif-font;
+  font-weight: 500;
   text-transform: uppercase;
-  color: #050500;
+  color: @heading-color;
 }
