--- a/less/variables.less
+++ b/less/variables.less
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+
+
 /*===========================
 
 Colors
@@ -9,6 +12,14 @@ Colors
 @red: #EE252F;
 @black: #080801;
 @heading-color: #050500;
+
+
+/*===========================
+
+Fonts
+
+===========================*/
+@sans-serif-font: 'Roboto', sans-serif;
 
 
 /*===========================
