--- a/less/styles.less
+++ b/less/styles.less
@@ -137,6 +137,11 @@ Photos
 	padding-bottom: @main-padding;
 }
 
+.float-left {
+	padding-left: @main-padding * 2;
+	padding-bottom: @main-padding;
+}
+
 /*===========================
 
 Sections
@@ -150,6 +155,19 @@ Sections
 .contact-us {
 	background-color: @gray;
 }
+
+
+/*===========================
+
+Footer
+
+===========================*/
+footer {
+	background-color: @black;
+	border-top: 10px solid @yellow;
+}
+
+
 
 
 /*===========================
@@ -171,6 +189,13 @@ Responsive Web Coding - 768px by 1024px (Tablet)
 	}
 	.float-right {
 		padding: @main-padding;
+	}
+	.float-left {
+		padding: 0 @layout-padding-desktop;
+	}
+	/* Sections */
+	.contact-us {
+		padding-bottom: @layout-padding-desktop * 1.5;
 	}
 }
 
@@ -195,13 +220,21 @@ Responsive Web Coding - 1366px by 768px (Laptop)
 		top: -23rem;
 	}
 	/* Sections */
-	.view-menu,
-	.contact-us {
+	.view-menu {
 		padding: @layout-padding-desktop;
+	}
+	.contact-us {
+		padding: @main-padding @layout-padding-desktop @layout-padding-desktop * 2 @layout-padding-desktop;
+	}
+	.contact-us-paragraph {
+		padding-right: @layout-padding-desktop;
 	}
 	/* Photos */
 	.float-right {
 		padding: @main-padding @layout-padding-desktop;
+	}
+	.float-left {
+		padding: 0 @layout-padding-desktop;
 	}
 }
 
