Fixed padding on contact us section.

--- a/less/styles.less
+++ b/less/styles.less
@@ -37,8 +37,8 @@ Links
 ===========================*/
 
 .btn-primary {
-.main-font ();
-.header-font();
+	.main-font ();
+	.header-font();
 	font-size: 18px;
 	background-color: @yellow;
 	border-radius: 8px;
@@ -233,7 +233,7 @@ Responsive Web Coding - 1366px by 768px (Laptop)
 		padding: @layout-padding-desktop;
 	}
 	.contact-us {
-		padding: @main-padding @layout-padding-desktop @layout-padding-desktop * 2 @layout-padding-desktop;
+		padding: @layout-padding-desktop @layout-padding-desktop @layout-padding-desktop * 2 @layout-padding-desktop;
 	}
 	.contact-us-paragraph {
 		padding-right: @layout-padding-desktop;
